// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PrivateReservation render when orientation is east-west renders an svg 1`] = `
<g>
  <circle
    cx={20}
    cy={40.42562584220407}
    r={4}
  />
  <circle
    cx={20}
    cy={70.42562584220407}
    r={4}
  />
  <line
    stroke="black"
    strokeWidth={2}
    x1={20}
    x2={20}
    y1={40.42562584220407}
    y2={70.42562584220407}
  />
  <text
    fill="black"
    fontSize={8}
    textAnchor="start"
    x={24}
    y={57.42562584220407}
  >
    C&A
  </text>
</g>
`;

exports[`PrivateReservation render when orientation is north-south renders an svg 1`] = `
<g>
  <circle
    cx={10}
    cy={49}
    r={4}
  />
  <circle
    cx={10}
    cy={79}
    r={4}
  />
  <line
    stroke="black"
    strokeWidth={2}
    x1={10}
    x2={10}
    y1={49}
    y2={79}
  />
  <text
    fill="black"
    fontSize={8}
    textAnchor="start"
    x={2}
    y={94}
  >
    C&A
  </text>
</g>
`;
